--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
         "postcss": "^8.4.6",
         "tailwindcss": "^3.1.0",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.3.0",
+        "fontawesome": "^5.6.3"
     }
 }
