--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.3.0",
-        "fontawesome": "^5.6.3"
+        "fontawesome": "^5.6.3",
+        "swiper": "^9.1.1"
     }
 }
