--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.3.0",
         "fontawesome": "^5.6.3",
+        "slick": "^1.12.2",
         "swiper": "^9.1.1"
     }
 }
