--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.14",
         "axios": "^1.1.2",
+        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^0.7.2",
         "postcss": "^8.4.21",
         "tailwindcss": "^3.2.7",
