--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "@fortawesome/fontawesome-free": "^6.3.0",
         "fontawesome": "^5.6.3",
         "slick": "^1.12.2",
+        "sweetalert": "^2.1.2",
+        "sweetalert2": "^11.7.3",
         "swiper": "^9.1.1"
     }
 }
